# lyrra-api

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  alembic.ini  architecture.html  feature_list.json  init.sh  pyproject.toml  session-handoff.md  skills-lock.json
.claude/agents/: planner.md
.claude/meetings/: auth-001.md
.claude/plans/: translate-feature-plan.html
.claude/skills/architecture-manager/: SKILL.md
.claude/skills/architecture-manager/templates/: ARCHITECTURE.md
.claude/skills/feature-build-orchestration/: SKILL.md
.claude/skills/feature-planning-meeting/: SKILL.md
alembic/: env.py
alembic/versions/: 22961aac149a_create_videos_and_subtitle_tracks.py  82a4b8dc2f2d_add_youtube_translation_fields_to_videos.py  e704940455dc_create_user.py
app/: config.py  main.py
app/core/storage/: client.py
app/storage/: client.py
app/subtitles/: ARCHITECTURE.html  exceptions.py  models.py  router.py  schemas.py  service.py
app/subtitles/application/: use_cases.py
app/subtitles/domain/: models.py  validator.py
app/subtitles/infrastructure/: orm_models.py  repository.py  router.py  schemas.py
app/videos/: ARCHITECTURE.html  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/videos/application/: use_cases.py
app/videos/domain/: models.py
app/videos/infrastructure/: orm_models.py  repository.py  router.py  schemas.py
app/youtube/: ARCHITECTURE.html  router.py  schemas.py  sentences.py  service.py
app/youtube/application/: ports.py  use_cases.py
app/youtube/domain/: exceptions.py  models.py  sentences.py
app/youtube/infrastructure/: downloader.py  router.py  schemas.py  transcriber.py
docs/: anti-patterns-and-reference.md  async-routes.md  auth-and-database.md  background-and-testing.md  dependencies.md  migrations-docs-linting.md  project-structure.md  pydantic.md
src/: config.py  database.py  main.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py
src/storage/: client.py
src/subtitles/: ARCHITECTURE.md  exceptions.py  models.py  router.py  schemas.py  service.py
src/videos/: ARCHITECTURE.md  exceptions.py  models.py  router.py  schemas.py  service.py
src/youtube/: ARCHITECTURE.md  client.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_auth_e2e.py  test_sentence_storage.py  test_sentences.py  test_smoke.py  test_storage.py  test_transcribe_e2e.py
(+6 files in other folders)
