[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyrra-api"
version = "0.1.0"
description = ""
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.12",
    "openai>=1.0.0",
    "uvicorn[standard]==0.34.2",
    "yt-dlp==2025.3.31",
    "python-multipart==0.0.20",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "boto3>=1.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
